--- a/aplicacao/backend/src/main/resources/application.properties
+++ b/aplicacao/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestaoDeposito
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.data.rest.baseUri=/api
+server.servlet.context-path=/api
