--- a/aplicacao/frontend/gestao-deposito/tsconfig.json
+++ b/aplicacao/frontend/gestao-deposito/tsconfig.json
@@ -23,7 +23,7 @@
       ]
      }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","vite.config.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue","vite.config.ts", "src/service/ApiServiceFactory.js"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": ["node_modules"]
 }
